syntax = "proto3";

package eywacontract.eywacontract;

import "gogoproto/gogo.proto";
import "eywacontract/eywacontract/params.proto";
import "eywacontract/eywacontract/register_type.proto";

option go_package = "eywa-contract/x/eywacontract/types";

// GenesisState defines the eywacontract module's genesis state.
message GenesisState {
           Params       params           = 1 [(gogoproto.nullable) = false];
  repeated RegisterType registerTypeList = 2 [(gogoproto.nullable) = false];
}

